# bevy6test

./: Cargo.toml  README.md
docs/demo/: bevy6tests.js  index.html
resources/: player.xcf
src/: main.rs  state.rs
src/bundle/: mod.rs
src/components/: mod.rs
src/events/: mod.rs
src/resources/: mod.rs
src/systems/: camera_update_system.rs  collision_handler_system.rs  damage_system.rs  despawn_system.rs  destroy_system.rs  destroyed_handler.rs  input_system.rs  life_display_system.rs  loading.rs  mod.rs  physics_handler.rs  player_shoot_system.rs  player_system.rs  shape_update_system.rs  startup_system.rs
src/systems/burn/: burn_down_system.rs  burn_recover_system.rs  burn_system.rs  burning_system.rs  mod.rs
