[package]
name = "bevy6tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.6", features = ["dynamic"] }
heron = {git = "https://github.com/jcornaz/heron.git", ref="64e76e4cfab7ca9452ec1657a93ab6f4e26111f3", features = ["debug-2d"]}
